--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <div class="navbar-container container">
         <div>
-          <h1 class="navbar-brand">Deep Bhapkar</h1>
+          <h1 class="navbar-brand">pushkar ahirrao</h1>
         </div>
         <ul class="menu-items">
           <li><a href="#about">About</a></li>
@@ -27,7 +27,7 @@
     </nav>
     <div class="home-content" id="home-page">
       <div class="name">
-        <h1>Hi, I'm Deep</h1>
+        <h1>Hi, I'm pushkar</h1>
         <p>A Web Developer</p>
       </div>
       <div class="angle-down-icon">
@@ -128,10 +128,10 @@
             <i class="fab fa-css3-alt"></i>
             <h2>cars_flip_cards</h2>
             <p>Build Using HTML,CSS</p>
-            <button><a href="https://github.com/deepbhapkar/cars_flip_cards" target="blank">View source <i
+            <button><a href="https://github.com/pushkar9356/cars_flip_cards" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="https://deepbhapkar.github.io/cars_flip_cards/" target="blank">Try it Live <i
+            <button><a href="https://pushkar9356.github.io/cars_flip_cards/" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
@@ -141,7 +141,7 @@
           <p>
             More
           </p>
-          <a href="https://github.com/deepbhapkar" target="blank">Github</a>
+          <a href="https://github.com/pushkar9356" target="blank">Github</a>
         </div>
       </div>
     </div>
@@ -154,11 +154,11 @@
           Get in touch with me <i class="fas fa-arrow-right"></i> deepbhapkar23@gmail.com
         </p>
         <p class="links">Or find me on:</p>
-        <a href="https://www.linkedin.com/in/deep-bhapkar23/" target="blank"><i class="fab fa-linkedin">
+        <a href="https://www.linkedin.com/in/pushkarpatil/" target="blank"><i class="fab fa-linkedin">
             Linkedin</i></a> 
-        <a href="https://github.com/deepbhapkar" target="blank"><i class="fab fa-github"></i> Github</a>>
-        <a href="https://twitter.com/deepbhapkar" target="blank"><i class="fab fa-twitter"> Twitter</i></a>
-        <a href="https://www.instagram.com/bhapkardeep/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://github.com/pushkar9356" target="blank"><i class="fab fa-github"></i> Github</a>>
+        <a href="https://twitter.com/pushkarahirrao" target="blank"><i class="fab fa-twitter"> Twitter</i></a>
+        <a href="https://www.instagram.com/pushkarahirrao16/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
     </div>
   </div>
